<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".QuizQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">
        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/blue"
            tools:text="Which country does this flag belong to?"/>
        <ImageView
            android:id="@+id/ivQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/quiz_image"
            tools:src="@drawable/ic_flag_of_india"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ProgressBar
                android:id="@+id/pbProgressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="false"
                android:progress="0"/>

            <TextView
                android:id="@+id/tvProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="14sp"
                android:text="@string/_0_10"/>

        </LinearLayout>

        <TextView
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:text="Option1"/>
        <TextView
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:text="Option2"/>
        <TextView
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:text="Option3"/>
        <TextView
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/blue"
            android:textSize="18sp"
            tools:text="Option4"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_dynamic_primary50"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>